# doccelerate

./: .dockerignore  .env.sample  .gitignore  .railwayignore  DOCKER.md  Makefile  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  railway.json  railway.toml
.cursor/rules/: coding-guide.mdc
api/: Dockerfile  main.py  pyproject.toml  railway.toml  start_worker.sh  worker.py
api/app/: database.py  settings.py
api/app/endpoints/: __init__.py  documents.py  health.py  index.py  query.py  users.py
api/app/schemas/: __init__.py  common.py  document.py  user.py
api/app/services/: __init__.py  chunk_service.py  database_service.py  diff_parser.py  elbow_method.py  file_processing_service.py  indexing_orchestrator.py  job_service.py  merkle_tree_service.py  openai_client.py  operations_parser.py  repository_service.py  storage.py  supabase_client.py  two_pass_generator.py
api/app/tasks/: __init__.py  celery_app.py  index.py  query.py
api/app/utils/: __init__.py  prompts.py
api/prisma/: schema.prisma
web/: .gitignore  Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  railway.toml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
web/app/: layout.tsx  page.tsx  providers.tsx
web/app/actions/: ensureProfile.ts  getGithubProfile.ts  getGithubToken.ts  getUserUuid.ts  githubConnect.ts  register.ts
web/lib/: auth.ts  config.ts  octokit.ts  supabase-client.ts  supabase-server.ts
web/prisma/: schema.prisma
web/public/: .gitkeep
web/styles/: globals.css
web/types/: markdown.d.ts
(+70 files in other folders)
