[project]
name = "doccelerate-api"
version = "0.1.0"
description = "Doccelerate API"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi>=0.109.2,<0.110.0",
    "pydantic>=2.5.3,<2.6.0",
    "pydantic-settings>=2.2.1,<2.3.0",
    "uvicorn>=0.27.1,<0.28.0",
    "python-multipart>=0.0.7,<0.1.0",
    "prisma>=0.10.0,<0.11.0",
    "celery>=5.3.6,<5.4.0",
    "redis>=5.0.1,<5.1.0",
    "httpx>=0.26.0,<0.27.0",
    "supabase>=2.4.0,<2.5.0",
    "openai>=1.11.1,<1.12.0",
    "tiktoken>=0.5.2,<0.6.0",
    "GitPython>=3.1.42,<3.2.0",
    "numpy>=1.26.3,<1.27.0",
    "unidiff>=0.7.5,<0.8.0",
    "psycopg2-binary>=2.9.9,<2.10.0",
]

